--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
     "serve": "^11.3.2",
     "tachyons": "^4.12.0"
   },
-  "homepage": "https://JasonHuang1213.github.io/face-recognition",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
